--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+.DS_Store
 
 # Test binary, built with `go test -c`
 *.test
@@ -19,3 +20,7 @@
 
 # Go workspace file
 go.work
+
+/bricks
+
+/tmp
